assign1/target/main/mc/parser/MCParser.py
# Generated from main/mc/parser/MC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'getInt'", "'getFloat'", "'put'", "'Int'", 
                     "'Float'", "'String'", "'Bool'", "'IntLn'", "'FloatLn'", 
                     "'StringLn'", "'BoolLn'", "'putLn'", "'void'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'*'", "'!'", "'||'", "'!='", "'<'", "'<='", 
                     "'='", "'-'", "'/'", "'%'", "'&&'", "'=='", "'>'", 
                     "'>='", "<INVALID>", "'if'", "'else'", "'do'", "'while'", 
                     "'for'", "'break'", "'continue'", "'return'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "VOIDTYPE", "INTLIT", "REAL", "BOOLLIT", 
                      "BlockComment", "LineComment", "ADD", "MULTI", "LOGICALNOT", 
                      "LOGICALOR", "NOTEQUAL", "LESSTHAN", "LTOREQUAL", 
                      "ASS", "SUBTR", "DIVISION", "MODUL", "LOGICALAND", 
                      "LOGICALEQ", "GREATER", "GREATEREQ", "PRIMI", "If", 
                      "Else", "Do", "While", "For", "Break", "Continue", 
                      "Return", "LB", "RB", "LP", "RP", "LS", "RS", "SEMI", 
                      "COMMA", "IDEN", "WS", "STRINGLIT", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declar = 1
    RULE_vardec = 2
    RULE_vartypes = 3
    RULE_varname = 4
    RULE_funcdec = 5
    RULE_functypes = 6
    RULE_arraypointer = 7
    RULE_funcpara = 8
    RULE_blockState = 9
    RULE_statement = 10
    RULE_index_exp = 11
    RULE_postfix_array = 12
    RULE_exp = 13
    RULE_exp1 = 14
    RULE_exp2 = 15
    RULE_exp3 = 16
    RULE_equal_and_not = 17
    RULE_exp4 = 18
    RULE_exp5 = 19
    RULE_exp6 = 20
    RULE_exp7 = 21
    RULE_exp8 = 22
    RULE_exp9 = 23
    RULE_operands = 24
    RULE_literal = 25
    RULE_call_func = 26
    RULE_para_list = 27
    RULE_if_statement = 28
    RULE_do_while_statement = 29
    RULE_for_statement = 30
    RULE_break_statement = 31
    RULE_continue_statement = 32
    RULE_return_statement = 33
    RULE_exp_statement = 34
    RULE_builtin_get = 35
    RULE_builtin_put = 36
    RULE_typeput = 37
    RULE_builtin_putln = 38
    RULE_typeputln = 39
    RULE_builtin_nline = 40
    RULE_builtinfunc = 41

    ruleNames =  [ "program", "declar", "vardec", "vartypes", "varname", 
                   "funcdec", "functypes", "arraypointer", "funcpara", "blockState", 
                   "statement", "index_exp", "postfix_array", "exp", "exp1", 
                   "exp2", "exp3", "equal_and_not", "exp4", "exp5", "exp6", 
                   "exp7", "exp8", "exp9", "operands", "literal", "call_func", 
                   "para_list", "if_statement", "do_while_statement", "for_statement", 
                   "break_statement", "continue_statement", "return_statement", 
                   "exp_statement", "builtin_get", "builtin_put", "typeput", 
                   "builtin_putln", "typeputln", "builtin_nline", "builtinfunc" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    VOIDTYPE=13
    INTLIT=14
    REAL=15
    BOOLLIT=16
    BlockComment=17
    LineComment=18
    ADD=19
    MULTI=20
    LOGICALNOT=21
    LOGICALOR=22
    NOTEQUAL=23
    LESSTHAN=24
    LTOREQUAL=25
    ASS=26
    SUBTR=27
    DIVISION=28
    MODUL=29
    LOGICALAND=30
    LOGICALEQ=31
    GREATER=32
    GREATEREQ=33
    PRIMI=34
    If=35
    Else=36
    Do=37
    While=38
    For=39
    Break=40
    Continue=41
    Return=42
    LB=43
    RB=44
    LP=45
    RP=46
    LS=47
    RS=48
    SEMI=49
    COMMA=50
    IDEN=51
    WS=52
    STRINGLIT=53
    UNCLOSE_STRING=54
    ILLEGAL_ESCAPE=55
    ERROR_CHAR=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def declar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.DeclarContext)
            else:
                return self.getTypedRuleContext(MCParser.DeclarContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 84
                self.declar()
                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MCParser.VOIDTYPE or _la==MCParser.PRIMI):
                    break

            self.state = 89
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardec(self):
            return self.getTypedRuleContext(MCParser.VardecContext,0)


        def funcdec(self):
            return self.getTypedRuleContext(MCParser.FuncdecContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_declar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclar" ):
                return visitor.visitDeclar(self)
            else:
                return visitor.visitChildren(self)




    def declar(self):

        localctx = MCParser.DeclarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declar)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.vardec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.funcdec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartypes(self):
            return self.getTypedRuleContext(MCParser.VartypesContext,0)


        def varname(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VarnameContext)
            else:
                return self.getTypedRuleContext(MCParser.VarnameContext,i)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_vardec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardec" ):
                return visitor.visitVardec(self)
            else:
                return visitor.visitChildren(self)




    def vardec(self):

        localctx = MCParser.VardecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.vartypes()
            self.state = 96
            self.varname()
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 97
                    self.match(MCParser.COMMA)
                    self.state = 98
                    self.varname() 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 104
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VartypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIMI(self):
            return self.getToken(MCParser.PRIMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_vartypes

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVartypes" ):
                return visitor.visitVartypes(self)
            else:
                return visitor.visitChildren(self)




    def vartypes(self):

        localctx = MCParser.VartypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vartypes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(MCParser.PRIMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarnameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDEN(self):
            return self.getToken(MCParser.IDEN, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_varname

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarname" ):
                return visitor.visitVarname(self)
            else:
                return visitor.visitChildren(self)




    def varname(self):

        localctx = MCParser.VarnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varname)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(MCParser.IDEN)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LS:
                self.state = 109
                self.match(MCParser.LS)
                self.state = 110
                self.match(MCParser.INTLIT)
                self.state = 111
                self.match(MCParser.RS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functypes(self):
            return self.getTypedRuleContext(MCParser.FunctypesContext,0)


        def IDEN(self):
            return self.getToken(MCParser.IDEN, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def blockState(self):
            return self.getTypedRuleContext(MCParser.BlockStateContext,0)


        def funcpara(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.FuncparaContext)
            else:
                return self.getTypedRuleContext(MCParser.FuncparaContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_funcdec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdec" ):
                return visitor.visitFuncdec(self)
            else:
                return visitor.visitChildren(self)




    def funcdec(self):

        localctx = MCParser.FuncdecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcdec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.functypes()
            self.state = 115
            self.match(MCParser.IDEN)
            self.state = 116
            self.match(MCParser.LB)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.PRIMI:
                self.state = 117
                self.funcpara()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MCParser.COMMA:
                    self.state = 118
                    self.match(MCParser.COMMA)
                    self.state = 119
                    self.funcpara()
                    self.state = 124
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 127
            self.match(MCParser.RB)
            self.state = 128
            self.blockState()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIMI(self):
            return self.getToken(MCParser.PRIMI, 0)

        def VOIDTYPE(self):
            return self.getToken(MCParser.VOIDTYPE, 0)

        def arraypointer(self):
            return self.getTypedRuleContext(MCParser.ArraypointerContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_functypes

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctypes" ):
                return visitor.visitFunctypes(self)
            else:
                return visitor.visitChildren(self)




    def functypes(self):

        localctx = MCParser.FunctypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functypes)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(MCParser.PRIMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.match(MCParser.VOIDTYPE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 132
                self.arraypointer()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraypointerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIMI(self):
            return self.getToken(MCParser.PRIMI, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_arraypointer

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraypointer" ):
                return visitor.visitArraypointer(self)
            else:
                return visitor.visitChildren(self)




    def arraypointer(self):

        localctx = MCParser.ArraypointerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arraypointer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(MCParser.PRIMI)
            self.state = 136
            self.match(MCParser.LS)
            self.state = 137
            self.match(MCParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncparaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIMI(self):
            return self.getToken(MCParser.PRIMI, 0)

        def IDEN(self):
            return self.getToken(MCParser.IDEN, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_funcpara

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncpara" ):
                return visitor.visitFuncpara(self)
            else:
                return visitor.visitChildren(self)




    def funcpara(self):

        localctx = MCParser.FuncparaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcpara)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(MCParser.PRIMI)
            self.state = 140
            self.match(MCParser.IDEN)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LS:
                self.state = 141
                self.match(MCParser.LS)
                self.state = 142
                self.match(MCParser.RS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def vardec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VardecContext)
            else:
                return self.getTypedRuleContext(MCParser.VardecContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.StatementContext)
            else:
                return self.getTypedRuleContext(MCParser.StatementContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_blockState

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockState" ):
                return visitor.visitBlockState(self)
            else:
                return visitor.visitChildren(self)




    def blockState(self):

        localctx = MCParser.BlockStateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_blockState)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(MCParser.LP)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.T__0) | (1 << MCParser.T__1) | (1 << MCParser.T__2) | (1 << MCParser.T__11) | (1 << MCParser.INTLIT) | (1 << MCParser.REAL) | (1 << MCParser.BOOLLIT) | (1 << MCParser.LOGICALNOT) | (1 << MCParser.SUBTR) | (1 << MCParser.PRIMI) | (1 << MCParser.If) | (1 << MCParser.Do) | (1 << MCParser.For) | (1 << MCParser.Break) | (1 << MCParser.Continue) | (1 << MCParser.Return) | (1 << MCParser.LB) | (1 << MCParser.LP) | (1 << MCParser.IDEN) | (1 << MCParser.STRINGLIT))) != 0):
                self.state = 148
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MCParser.PRIMI]:
                    self.state = 146
                    self.vardec()
                    pass
                elif token in [MCParser.T__0, MCParser.T__1, MCParser.T__2, MCParser.T__11, MCParser.INTLIT, MCParser.REAL, MCParser.BOOLLIT, MCParser.LOGICALNOT, MCParser.SUBTR, MCParser.If, MCParser.Do, MCParser.For, MCParser.Break, MCParser.Continue, MCParser.Return, MCParser.LB, MCParser.LP, MCParser.IDEN, MCParser.STRINGLIT]:
                    self.state = 147
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 153
            self.match(MCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_statement(self):
            return self.getTypedRuleContext(MCParser.If_statementContext,0)


        def do_while_statement(self):
            return self.getTypedRuleContext(MCParser.Do_while_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(MCParser.For_statementContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(MCParser.Break_statementContext,0)


        def continue_statement(self):
            return self.getTypedRuleContext(MCParser.Continue_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(MCParser.Return_statementContext,0)


        def exp_statement(self):
            return self.getTypedRuleContext(MCParser.Exp_statementContext,0)


        def blockState(self):
            return self.getTypedRuleContext(MCParser.BlockStateContext,0)


        def builtinfunc(self):
            return self.getTypedRuleContext(MCParser.BuiltinfuncContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statement)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.if_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.do_while_statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 157
                self.for_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 158
                self.break_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 159
                self.continue_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 160
                self.return_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 161
                self.exp_statement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 162
                self.blockState()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 163
                self.builtinfunc()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Index_expContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operands(self):
            return self.getTypedRuleContext(MCParser.OperandsContext,0)


        def postfix_array(self):
            return self.getTypedRuleContext(MCParser.Postfix_arrayContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_index_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndex_exp" ):
                return visitor.visitIndex_exp(self)
            else:
                return visitor.visitChildren(self)




    def index_exp(self):

        localctx = MCParser.Index_expContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_index_exp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.operands(0)
            self.state = 167
            self.postfix_array()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Postfix_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_postfix_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostfix_array" ):
                return visitor.visitPostfix_array(self)
            else:
                return visitor.visitChildren(self)




    def postfix_array(self):

        localctx = MCParser.Postfix_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_postfix_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(MCParser.LS)
            self.state = 170
            self.exp()
            self.state = 171
            self.match(MCParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp1(self):
            return self.getTypedRuleContext(MCParser.Exp1Context,0)


        def ASS(self):
            return self.getToken(MCParser.ASS, 0)

        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = MCParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_exp)
        try:
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.exp1(0)
                self.state = 174
                self.match(MCParser.ASS)
                self.state = 175
                self.exp()
                pass
